--- a/citation.bib
+++ b/citation.bib
@@ -1,28 +1,41 @@
-% BibTeX Citation File for A Hand For A Game
-% This file provides citation information for the research project
+% BibTeX Citation File for A Hand For A Game and resBalancer Engine
+% This file provides citation information for the research project and its adaptive engine
 % Generated from CITATION.cff - Version 1.0.0 (2025-08-05)
 
-% Main software citation
-@software{maulida_hand_for_game_2025,
-  title        = {A Hand For A Game: Real-time Hand Gesture Recognition for Gaming Applications},
-  author       = {Maulida, M. Bilal},
+% Main software citation (includes resBalancer engine)
+@software{bilal_hand_for_game_resbalancer_2025,
+  title        = {A Hand For A Game: Real-time Hand Gesture Recognition and the resBalancer Engine for Gaming Applications},
+  author       = {M. Bilal},
   year         = {2025},
   month        = aug,
   version      = {1.0.0},
   url          = {https://github.com/stdnt-c1/A-Hand-For-A-Game},
   repository   = {https://github.com/stdnt-c1/A-Hand-For-A-Game},
   license      = {AGPL-3.0-or-later},
-  note         = {Personal research project with author-specific calibrations},
-  abstract     = {An experimental computer vision system that enables real-time hand gesture recognition for gaming applications. The system utilizes MediaPipe for hand landmark detection and implements custom gesture interpretation algorithms optimized for Windows gaming environments. This is a personal research project with author-specific calibrations and is not intended for general accessibility use or production deployment.},
-  keywords     = {computer vision, hand gesture recognition, gaming, accessibility, MediaPipe, real-time processing, Python, Windows, machine learning, human-computer interaction},
+  note         = {Personal research project with author-specific calibrations; includes resBalancer engine as case study software},
+  abstract     = {An experimental computer vision system for real-time hand gesture recognition in gaming, featuring the custom resBalancer engine for adaptive frame processing and performance optimization. The system uses MediaPipe for hand landmark detection and implements custom gesture interpretation algorithms, with a C++/CUDA backend for high performance. This is a personal research project with author-specific calibrations and is not intended for general accessibility use or production deployment.},
+  keywords     = {computer vision, hand gesture recognition, gaming, accessibility, MediaPipe, real-time processing, Python, Windows, machine learning, human-computer interaction, resBalancer, CUDA, adaptive scaling},
   affiliation  = {Aspiring Independent Researcher},
   orcid        = {0009-0005-2826-8169}
 }
 
+% Case study: resBalancer engine as adaptive processing software
+@software{bilal_resbalancer_engine_2025,
+  title        = {resBalancer: Adaptive Frame Processing Engine for Real-time Computer Vision},
+  author       = {M. Bilal},
+  year         = {2025},
+  month        = aug,
+  version      = {1.0.0},
+  url          = {https://github.com/stdnt-c1/A-Hand-For-A-Game/tree/main/resBalancer},
+  note         = {Case study software for adaptive frame processing and performance optimization in real-time gesture recognition},
+  abstract     = {The resBalancer engine is a C++/CUDA module for adaptive frame processing, dynamic resolution scaling, and performance optimization in real-time computer vision systems. Developed as part of the A Hand For A Game project, it demonstrates advanced resource management and is suitable as a case study for research in real-time vision and system optimization.},
+  keywords     = {adaptive scaling, CUDA, frame processing, real-time vision, performance optimization, case study, computer vision}
+}
+
 % Alternative citation for academic papers
-@misc{maulida_gesture_recognition_2025,
+@misc{bilal_gesture_recognition_2025,
   title        = {Experimental Single-Hand Gesture Recognition for Gaming Control: A Personal Research Investigation},
-  author       = {Maulida, M. Bilal},
+  author       = {M. Bilal},
   year         = {2025},
   month        = aug,
   howpublished = {GitHub Repository},
@@ -33,9 +46,9 @@
 }
 
 % Technical report style citation
-@techreport{maulida_hand_gesture_technical_2025,
+@techreport{bilal_hand_gesture_technical_2025,
   title        = {A Hand For A Game: Technical Implementation of Real-time Hand Gesture Recognition},
-  author       = {Maulida, M. Bilal},
+  author       = {M. Bilal},
   year         = {2025},
   month        = aug,
   institution  = {Independent Research},
@@ -46,9 +59,9 @@
 }
 
 % Conference/workshop style citation (if used in academic presentations)
-@inproceedings{maulida_hand_gesture_demo_2025,
+@inproceedings{bilal_hand_gesture_demo_2025,
   title        = {A Hand For A Game: Demonstrating Personal Research in Gesture-Based Gaming Control},
-  author       = {Maulida, M. Bilal},
+  author       = {M. Bilal},
   year         = {2025},
   month        = aug,
   booktitle    = {Personal Research Demonstrations},
@@ -59,9 +72,9 @@
 }
 
 % Dataset citation (if applicable for gesture definitions)
-@misc{maulida_gesture_definitions_2025,
+@misc{bilal_gesture_definitions_2025,
   title        = {Personal Gesture Definitions for Gaming Control},
-  author       = {Maulida, M. Bilal},
+  author       = {M. Bilal},
   year         = {2025},
   month        = aug,
   howpublished = {Software Configuration Files},
@@ -71,9 +84,9 @@
 }
 
 % Research methodology citation
-@misc{maulida_methodology_2025,
+@misc{bilal_methodology_2025,
   title        = {Personal Research Methodology: Single-Hand Gesture Recognition for Gaming},
-  author       = {Maulida, M. Bilal},
+  author       = {M. Bilal},
   year         = {2025},
   month        = aug,
   howpublished = {Research Documentation},
@@ -100,7 +113,7 @@
 % - Include appropriate disclaimers about generalizability
 %
 % RECOMMENDED CITATION CONTEXT:
-% "Maulida (2025) presents a personal research exploration into gesture-based 
+% "Bilal (2025) presents a personal research exploration into gesture-based 
 % gaming controls, noting significant limitations including author-specific 
 % calibrations and non-production status..."
 %
